tests/dev_and_build/errors/js_throw/_js_throw_dev.test.mjs/0_chromium/.jsenv/chrome@130.00/main.js
import { triggerError } from "/trigger_error.js";

triggerError();

//# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZpbGU6Ly8vVXNlcnMvZGFtL0RvY3VtZW50cy9kZXYvY29yZS90ZXN0cy9kZXZfYW5kX2J1aWxkL2Vycm9ycy9qc190aHJvdy9jbGllbnQvbWFpbi5qcyJdLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgeyB0cmlnZ2VyRXJyb3IgfSBmcm9tIFwiLi90cmlnZ2VyX2Vycm9yLmpzXCI7XG5cbnRyaWdnZXJFcnJvcigpO1xuIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxtQkFBb0I7O0FBRWpELENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQzsifQ==
